--- a/.ci/docker/requirements-ci.txt
+++ b/.ci/docker/requirements-ci.txt
@@ -365,7 +365,7 @@ PyYAML
 pyzstd
 setuptools
 
-ninja==1.11.1 ; platform_machine == "aarch64"
+ninja==1.11.1
 scons==4.5.2 ; platform_machine == "aarch64"
 
 pulp==2.9.0 ; python_version >= "3.8"
